<resources>
    <string name="app_name">Evolotl</string>
    <string name="title">Evolotl</string>
    <string name="buttStart">Begin</string>
    <string name="fact">Axolotls are cute</string>
    <string name="buttList">List</string>
    <string name="buttEvolve">Feed</string>
    <string name="load">Load images</string>
    <string name="buttShow">Show Me Real Axolotls</string>
    <string name="ax_name">Name</string>
    <string name="buttRename">Rename this boi</string>
    <string name="TextView1">txtview1</string>
    <string name="TextView2">txtview2</string>
    <string name="TextView3">txtview3</string>
    <string name="buttBuy">Buy</string>
    <string name="happiness">0</string>
    <string name="buttImList">Go to imlist</string>
</resources>