<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">


    <TextView
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/TextView1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:id="@+id/textView1"
        android:layout_weight="66.6"/>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="33.3">

        <TextView
            android:gravity="center"
            android:text="@string/TextView2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textColor="@color/white"
            android:id="@+id/textView2"/>

        <TextView
            android:gravity="center"
            android:text="@string/TextView3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/textView3"
            android:textColor="@color/white"
            android:layout_below="@+id/textView2"/>

    </LinearLayout>
    <Button
        android:id="@+id/BuyButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/buttBuy" />
</LinearLayout>