<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainGame">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/ListButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:gravity="start"
            android:text="@string/buttList" />

        <Button
            android:id="@+id/ShowButton"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:gravity="start"
            android:text="@string/buttShow" />

        <ImageView
            android:id="@+id/eggid"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/egg_test" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/EvolveButton"
                android:layout_width="170dp"
                android:layout_height="70dp"
                android:text="@string/buttEvolve"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>